# yield

./: .dockerignore  .env  2024_params.csv  CRITICAL_FIXES_SUMMARY.md  CROP_YIELD_API_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY_SUMMARY.md  DETAILED_HEALTH_ENDPOINT.md  Dockerfile  FINAL_DEPLOYMENT_STATUS.md  GEE_Chattisgarph.txt  MODEL_COMPATIBILITY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_ENV_VARS.md  README.md  RENDER_DEPLOYMENT_COMPLETE.md  RENDER_DEPLOYMENT_GUIDE.md  TASK_10_ERROR_HANDLING_SUMMARY.md  TASK_10_VERIFICATION.md  TASK_11_API_DOCUMENTATION_UPDATE.md  TASK_12_BACKWARD_COMPATIBILITY_VERIFICATION.md  TASK_13_MONITORING_LOGGING_SUMMARY.md  TASK_14_E2E_VALIDATION_SUMMARY.md  TASK_1_SETUP_COMPLETE.md  TASK_2_OPTIONAL_VARIETY_IMPLEMENTATION.md  TASK_3_INTEGRATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_4_OPTIONAL_VARIETY_IMPLEMENTATION.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_5_RESPONSE_METADATA_SUMMARY.md  TASK_6_DATABASE_INDEXES_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_7_VALIDATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_8_INTEGRATION_TESTS_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TASK_9_PERFORMANCE_TESTS_SUMMARY.md  TEST_VARIETY_SELECTION_SERVICE_SUMMARY.md  VALIDATION_README.md  (+46 more)
config/: __init__.py  api_config.json  demo_config.json
data/: phase2_completion.csv
demo/: demo_api.py
model_results/: final_training_report.json  predictions_bhopal_training_gradient_boosting_20251013_160525.csv  predictions_bhopal_training_gradient_boosting_20251018_213312.csv  (+58 more)
(+312 files in other folders)
